--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "graphql": "^16.6.0",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -22,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "starttail": "npx tailwindcss -i ./src/input.css -o ./src/project.css --watch",
+    "starttail": "npx tailwindcss -i ./src/input.scss -o ./src/project.css --watch",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
